# autorecipes

./: .pydocstyle  .pylintrc  .travis.yml  README.rst  conanfile.py  mypy.ini  pyproject.toml
autorecipes/: __init__.py  cmake.py  descriptors.pyi  python.py  stdlib.py
autorecipes/data/configure/: CMakeLists.txt  attributes.py.in
autorecipes/data/install/: CMakeLists.txt  cpp_info.py.in
autorecipes/stubs/conans/: __init__.pyi
conan_cmake/: __init__.py  cmake_conanfile.py  descriptors.py  python_conanfile.py
docs/: conf.py
tests/: test_descriptors.py
